--- a/index.html
+++ b/index.html
@@ -25,7 +25,11 @@
 	</header>
 
 	<main>
-		<h1 id="hiMessage">HEY, IM NATASHA!</h1>
+		<!-- <h1 id="hiMessage">HEY, IM NATASHA!</h1> -->
+		<div class="sign">
+			<span class="fast-flicker">HEY, </span>I'M <span class="flicker">NATA</span>SHA!
+		  </div>
+
 
 		<!-- <p id="hiMessage"> HEY, IM NATASHA!</p> -->
 
