--- a/personal.html
+++ b/personal.html
@@ -20,7 +20,17 @@
 		</nav>
 		<!-- <h1>About</h1> -->
 	</header>
-	
+	<div class="row">
+		<div class="column" style="background-color:#aaa;">
+		  <h2>Yokohama</h2>
+		</div>
+		<div class="column" style="background-color:#bbb;">
+		  <h2>New Jersey</h2>
+		</div>
+		<div class="column" style="background-color:#ccc;">
+		  <h2>Michigan</h2>
+		</div>
+	  </div>
 	<main>
 		<h1>About Me</h1>
 		<img id="natashaProfile" src="imgs/linkedinphoto.JPG" alt="Profile Picture" height="200" width="200" class="center"/>
