--- a/index.html
+++ b/index.html
@@ -3,16 +3,18 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="icon" href="imgs/51zLZbEVSTL._AC_SL1200_.jpg">
+	<link rel="icon" href="imgs/sunsetBackground.jpg">
 	<link rel="stylesheet" href="css/html5reset.css">
 	<link rel="stylesheet" href="css/style.css">
 	<title>Home</title>
 </head>
 <body id="home">
+
 	<!-- You do not need to make any changes to this file, but
 	you should still review the tags to make sure that you
 	are familiar with them. -->
 	<header>
+		<div class="skip"><a href="index.html">Skip to Main Content</a></div>
 		<nav>
 			<ul class="nav_links">
 				<li><a class = "currentIndex" href = "index.html">Home</a></li>
@@ -25,6 +27,7 @@
 	</header>
 
 	<main>
+		<h1 id = "headtag">Home</h1>
 		<!-- <h1 id="hiMessage">HEY, IM NATASHA!</h1> -->
 		<div class="sign">
 			<span class="fast-flicker">HEY, </span>I'M <span class="flicker">NATA</span>SHA!
@@ -36,7 +39,7 @@
 	</main>
 
 	<footer>
-		<p>Natasha Singhvi &copy; 2021</p>
+		<p id="footer">Natasha Singhvi &copy; 2021</p>
 	</footer>
 </body>
 </html>
