--- a/random.html
+++ b/random.html
@@ -6,13 +6,14 @@
 	the console. -->
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="icon" href="imgs/51zLZbEVSTL._AC_SL1200_.jpg">
+	<link rel="icon" href="imgs/sunsetBackground.jpg">
 	<link rel="stylesheet" href="css/html5reset.css">
 	<link rel="stylesheet" href="css/style.css">
 	<title>Random</title>
 </head>
 <body id="pastproject">
 	<header>
+		<div class="skip"><a href="index.html">Skip to Main Content</a></div>
 		<nav>
 			<ul class="nav_links">
 				<li><a href = "index.html">Home</a></li>
@@ -27,14 +28,14 @@
 <main>
 	<h1>The following are personal coding projects I've worked on in the past! </h1>
 
-	<p id="BoggleTitle">Boggle Project</p>
-	<img src="imgs/BoggleSolver.png" alt="BoggleSolverPic" height="200" width="200" class="center"/>
+	<p id="BoggleTitle">1. Boggle Project</p>
+	<img id = "BogglePic" src="imgs/BoggleSolver.png" alt="BoggleSolverPic" height="200" width="200" class="center"/>
 	<p>Last summer, I created a Boggle Solver Web Application that allows users to upload an image of a Boggle
 		Boggle and immediately generates a list of word solutions! Just to give a bit of a background, Boggle is a word-finding game 
 	where users are given a grid of letters and need to find as many words in sequences of adjacent letters under a time limit.</p>
-	<a href="https://github.com/nsinghvi123/Boggle">Link to GitHub Project</a>
+	<a id = "links" href="https://github.com/nsinghvi123/Boggle">Link to GitHub Project</a>
 	<br />
-	<a href="https://www.youtube.com/watch?v=w0mSC-j7yPo">Boggle Solver Video Demo</a>
+	<a id = "linksSecond" href="https://www.youtube.com/watch?v=w0mSC-j7yPo">Boggle Solver Video Demo</a>
 
 
 
@@ -46,7 +47,7 @@
 
 </main>
 	<footer>
-		<p id="personalMessage">Natasha Singhvi&copy; 2021</p>
+		<p id="footer">Natasha Singhvi &copy; 2021</p>
 	</footer>
 </body>
 </html>
