--- a/social.html
+++ b/social.html
@@ -6,13 +6,14 @@
 	the console. -->
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="icon" href="imgs/51zLZbEVSTL._AC_SL1200_.jpg">
+	<link rel="icon" href="imgs/sunsetBackground.jpg">
 	<link rel="stylesheet" href="css/html5reset.css">
 	<link rel="stylesheet" href="css/style.css">
 	<title>Random</title>
 </head>
 <body id="social">
 	<header>
+		<div class="skip"><a href="index.html">Skip to Main Content</a></div>
 		<nav>
 			<ul class="nav_links">
 				<li><a href = "index.html">Home</a></li>
@@ -26,13 +27,13 @@
 <main>
 	<h1 id="socialMessage">Thank you for vising my page! Social Media linked below:</h1>
 	<br />
-    <a href="https://www.linkedin.com/in/natasha-singhvi-810099194/">LinkedIn</a>
+    <a id = "links" href="https://www.linkedin.com/in/natasha-singhvi-810099194/">LinkedIn</a>
 	<br />
 	<br />
-	<a href="https://github.com/nsinghvi123">GitHub</a>
+	<a id = "linksSecond" href="https://github.com/nsinghvi123">GitHub</a>
 	<br />
 	<br />
-	<a href="https://www.youtube.com/watch?v=w0mSC-j7yPo">Video Demo of Boggle Solver Project</a>
+	<a id = "linksThird" href="https://www.youtube.com/watch?v=w0mSC-j7yPo">Video Demo of Boggle Solver Project</a>
 
 
 
@@ -40,7 +41,7 @@
 
 </main>
 	<footer>
-		<p >Natasha Singhvi &copy; 2021</p>
-	</footer>
+		<p id="footer">Natasha Singhvi &copy; 2021</p>
+		</footer>
 </body>
 </html>
