--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	you should still review the tags to make sure that you
 	are familiar with them. -->
 	<header>
-		<div class="skip"><a href="index.html">Skip to Main Content</a></div>
+		<div class="skip"><a href="#footer">Skip to Main Content</a></div>
 		<nav>
 			<ul class="nav_links">
 				<li><a class = "currentIndex" href = "index.html">Home</a></li>
