--- a/personal.html
+++ b/personal.html
@@ -11,7 +11,7 @@
 <body id="about">
 	
 	<header>
-		<div class="skip"><a href="index.html">Skip to Main Content</a></div>
+		<div class="skip"><a href="#london">Skip to Main Content</a></div>
 	  	<nav>
 			<ul class="nav_links">
 				<li><a href = "index.html">Home</a></li>
