--- a/random.html
+++ b/random.html
@@ -13,7 +13,7 @@
 </head>
 <body id="pastproject">
 	<header>
-		<div class="skip"><a href="index.html">Skip to Main Content</a></div>
+		<div class="skip"><a href="#BoggleTitle">Skip to Main Content</a></div>
 		<nav>
 			<ul class="nav_links">
 				<li><a href = "index.html">Home</a></li>
