--- a/social.html
+++ b/social.html
@@ -13,7 +13,7 @@
 </head>
 <body id="social">
 	<header>
-		<div class="skip"><a href="index.html">Skip to Main Content</a></div>
+		<div class="skip"><a href="#socialMessage">Skip to Main Content</a></div>
 		<nav>
 			<ul class="nav_links">
 				<li><a href = "index.html">Home</a></li>
@@ -25,6 +25,7 @@
 </header>
 
 <main>
+	
 	<h1 id="socialMessage">Thank you for vising my page! Social Media linked below:</h1>
 	<br />
     <a id = "links" href="https://www.linkedin.com/in/natasha-singhvi-810099194/">LinkedIn</a>
@@ -34,6 +35,11 @@
 	<br />
 	<br />
 	<a id = "linksThird" href="https://www.youtube.com/watch?v=w0mSC-j7yPo">Video Demo of Boggle Solver Project</a>
+
+	<br />
+	<br />
+
+
 
 
 
